fix: update button margin in ButtonsContainer for consistent spacing

--- a/Projects/4-Calculator-version-1/calculator/src/components/ButtonsContainer.module.css
+++ b/Projects/4-Calculator-version-1/calculator/src/components/ButtonsContainer.module.css
@@ -6,5 +6,5 @@
 .button {
   width: 45px;
   height: 45px;
-  margin: 4px;
+  margin: 3px;
 }
